# ProvaFinaleLabMonopoli

./: .gitignore  CMakeLists.txt  README.md
data/: BotGameGazzettinoExample.txt  Gazzettino.txt  HumanGameGazzettinoExample.txt
include/: Board.h  Bot.h  EventType.h  ExpandNamespace.h  Human.h  Logger.h  MonopolyGame.h  Player.h  Position.h  Tile.h  test.cpp
src/: Board.cpp  Bot.cpp  Human.cpp  Logger.cpp  MonopolyGame.cpp  Player.cpp  Position.cpp  Tile.cpp  main.cpp
